[gd_scene load_steps=30 format=3 uid="uid://bjr4d282863jf"]

[ext_resource type="Script" path="res://scenes/player/user_interface.gd" id="1_2e1s1"]
[ext_resource type="FontFile" uid="uid://dkx15fd30kr63" path="res://assets/font/OriginalSurfer-Regular.ttf" id="1_olx0k"]
[ext_resource type="Texture2D" uid="uid://dkpbmwg07gd6v" path="res://assets/ui/health/green_heart.png" id="2_0d7dp"]
[ext_resource type="Texture2D" uid="uid://c7cxhur1tcq51" path="res://assets/ui/health/yellow_heart.png" id="3_abtrg"]
[ext_resource type="Texture2D" uid="uid://dbtftdevnqyc2" path="res://assets/ui/health/red_heart.png" id="4_2smar"]
[ext_resource type="Texture2D" uid="uid://ibn610wdu7lp" path="res://assets/ui/health/gray_heart.png" id="5_3eudh"]
[ext_resource type="Texture2D" uid="uid://badl5wonu67bj" path="res://assets/ui/orbs_left/orb_ui_8_used.png" id="6_c5n2j"]
[ext_resource type="Texture2D" uid="uid://c246qnxow3nq0" path="res://assets/ui/orbs_left/orb_ui_7_used.png" id="7_7nham"]
[ext_resource type="Texture2D" uid="uid://bxlhmqu5xj516" path="res://assets/ui/dash/dash_cooldown_used.png" id="7_cr8bw"]
[ext_resource type="Texture2D" uid="uid://clre8n8j7i8dw" path="res://assets/ui/orbs_left/orb_ui_6_used.png" id="8_hl6b5"]
[ext_resource type="Texture2D" uid="uid://droipx0qm3njw" path="res://assets/ui/orbs_left/orb_ui_5_used.png" id="9_pcsqp"]
[ext_resource type="Texture2D" uid="uid://c3w7btsxu21wr" path="res://assets/ui/orbs_left/orb_ui_4_used.png" id="10_6iruo"]
[ext_resource type="Texture2D" uid="uid://cs55jcmupi17f" path="res://assets/ui/orbs_left/orb_ui_3_used.png" id="11_lpu70"]
[ext_resource type="Texture2D" uid="uid://c1nob0ryuxdr0" path="res://assets/ui/orbs_left/orb_ui_2_used.png" id="12_n6lnd"]
[ext_resource type="Texture2D" uid="uid://dygok8hn23xxr" path="res://assets/ui/orbs_left/orb_ui_1_used.png" id="13_yqsqj"]
[ext_resource type="Texture2D" uid="uid://2lwjg5fw0ha1" path="res://assets/ui/orbs_left/orb_ui.png" id="14_euhex"]
[ext_resource type="Texture2D" uid="uid://by5f1k44gm2ln" path="res://assets/ui/dash/dash_cooldown.png" id="15_5p3gt"]
[ext_resource type="Texture2D" uid="uid://sv86mdu0rlca" path="res://assets/ui/enemy_counter.png" id="17_0hxhh"]
[ext_resource type="Texture2D" uid="uid://bgwwc2yi0ewen" path="res://assets/badges/badge_diamond.png" id="18_urkug"]
[ext_resource type="PackedScene" uid="uid://d0ffkm274ebff" path="res://scenes/ui/health_bar.tscn" id="18_xtje2"]
[ext_resource type="Texture2D" uid="uid://d3hqq0efd15ba" path="res://assets/badges/badge_gold.png" id="19_mdb25"]
[ext_resource type="Texture2D" uid="uid://bfic3auakoqbh" path="res://assets/badges/badge_silver.png" id="20_et30p"]
[ext_resource type="Texture2D" uid="uid://dt16k0rc88f14" path="res://assets/badges/badge_bronze.png" id="21_08pvu"]
[ext_resource type="Texture2D" uid="uid://ds1s76nkuw3a6" path="res://assets/badges/badge_normal.png" id="22_0ljda"]
[ext_resource type="PackedScene" uid="uid://jwoaelbd22k5" path="res://scenes/vfx/enemy_counter_vfx.tscn" id="25_ibunq"]
[ext_resource type="Texture2D" uid="uid://bkmyhxwfidcv" path="res://assets/xelu_controller_and_key_prompts_pack/Keyboard Light/KeyLight0100.png" id="26_sx7bk"]
[ext_resource type="Texture2D" uid="uid://se6xutoxuq67" path="res://assets/xelu_controller_and_key_prompts_pack/Playstation/Playstation0036.png" id="27_1cqpa"]

[sub_resource type="Theme" id="Theme_2u5c8"]
default_font = ExtResource("1_olx0k")
default_font_size = 40
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 15
Label/font_sizes/font_size = 50

[sub_resource type="SpriteFrames" id="SpriteFrames_udo2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_0ljda")
}, {
"duration": 1.0,
"texture": ExtResource("21_08pvu")
}, {
"duration": 1.0,
"texture": ExtResource("20_et30p")
}, {
"duration": 1.0,
"texture": ExtResource("19_mdb25")
}, {
"duration": 1.0,
"texture": ExtResource("18_urkug")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_2u5c8")
script = ExtResource("1_2e1s1")
green_heart = ExtResource("2_0d7dp")
yellow_heart = ExtResource("3_abtrg")
red_heart = ExtResource("4_2smar")
gray_heart = ExtResource("5_3eudh")
dash = ExtResource("15_5p3gt")
dash_used = ExtResource("7_cr8bw")
orbs_left = Array[Texture2D]([ExtResource("6_c5n2j"), ExtResource("7_7nham"), ExtResource("8_hl6b5"), ExtResource("9_pcsqp"), ExtResource("10_6iruo"), ExtResource("11_lpu70"), ExtResource("12_n6lnd"), ExtResource("13_yqsqj"), ExtResource("14_euhex")])
badges = SubResource("SpriteFrames_udo2v")

[node name="HealthBar" parent="." instance=ExtResource("18_xtje2")]
layout_mode = 0

[node name="OrbsLeft" type="TextureRect" parent="."]
layout_mode = 1
offset_top = 250.0
offset_right = 768.0
offset_bottom = 506.0
texture = ExtResource("14_euhex")

[node name="DashCooldown" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -288.0
offset_right = 128.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("15_5p3gt")

[node name="CurrentEnemyCountBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 256.0
offset_bottom = 384.0
grow_horizontal = 2
texture = ExtResource("17_0hxhh")

[node name="CurrentEnemyCountLabel" type="Label" parent="CurrentEnemyCountBack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.48535
offset_top = 11.3137
offset_right = -8.48535
offset_bottom = 11.3137
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
text = "9
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyCounterVFX" parent="CurrentEnemyCountBack" instance=ExtResource("25_ibunq")]
position = Vector2(180, 180)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 2

[node name="TimeText" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 150
text = "0000"
horizontal_alignment = 2

[node name="CurrentBadge" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("22_0ljda")

[node name="Help" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2129.0
offset_top = 1097.0
offset_right = -2129.0
offset_bottom = 1097.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Help"]
layout_mode = 2
offset_left = -8.0
offset_right = 104.0
offset_bottom = 63.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Hold
"

[node name="HelpKeyboard" type="TextureRect" parent="Help"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 120.0
offset_top = -34.0
offset_right = 376.0
offset_bottom = 222.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("26_sx7bk")

[node name="HelpController" type="TextureRect" parent="Help"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
offset_left = 120.0
offset_top = -34.0
offset_right = 376.0
offset_bottom = 222.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("27_1cqpa")

[node name="Label2" type="Label" parent="Help"]
layout_mode = 2
offset_left = 257.0
offset_right = 526.0
offset_bottom = 63.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "for controls"
